--- a/DCT/CMakeLists.txt
+++ b/DCT/CMakeLists.txt
@@ -3,3 +3,4 @@ set(DCT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory(DCTLib)
 add_subdirectory(DCTApp)
 add_subdirectory(PSNRTableApp)
+add_subdirectory(DCTCompare)
