--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,21 +8,21 @@ if(CMAKE_BUILD_TYPE STREQUAL "")
 endif()
 
 if(MSVC)
-    set(CompilerFlags
-        CMAKE_CXX_FLAGS
-        CMAKE_CXX_FLAGS_DEBUG
-        CMAKE_CXX_FLAGS_RELEASE
-		CMAKE_CXX_FLAGS_MINSIZEREL
-		CMAKE_CXX_FLAGS_RELWITHDEBINFO
-        CMAKE_C_FLAGS
-        CMAKE_C_FLAGS_DEBUG
-        CMAKE_C_FLAGS_RELEASE
-		CMAKE_C_FLAGS_MINSIZEREL
-		CMAKE_C_FLAGS_RELWITHDEBINFO
-    )
-    foreach(CompilerFlag ${CompilerFlags})
-        string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
-    endforeach()
+    #set(CompilerFlags
+    #    CMAKE_CXX_FLAGS
+    #    CMAKE_CXX_FLAGS_DEBUG
+    #    CMAKE_CXX_FLAGS_RELEASE
+	#	 CMAKE_CXX_FLAGS_MINSIZEREL
+	#	 CMAKE_CXX_FLAGS_RELWITHDEBINFO
+    #    CMAKE_C_FLAGS
+    #    CMAKE_C_FLAGS_DEBUG
+    #    CMAKE_C_FLAGS_RELEASE
+	#	 CMAKE_C_FLAGS_MINSIZEREL
+	#	 CMAKE_C_FLAGS_RELWITHDEBINFO
+    #)
+    #foreach(CompilerFlag ${CompilerFlags})
+    #    string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+    #endforeach()
     set(CMAKE_EXECUTABLE_SUFFIX "_msvc${CMAKE_EXECUTABLE_SUFFIX}")
 endif()
 
